2004-01-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-normalize-body): Fix a comment that the
	problem related to `replace-match' has been fixed at 2004-01-15,
	thanks to Handa-san.

2003-12-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-normalize-body): Don't use the
	`(replace-match "\\1\r\n")' form since it may convert the unibyte
	string into multibyte in Emacs 21.4.

2003-12-12  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-edit.el (mime-edit-user-agent-value): Add a setting for
	XEmacs CHISE.

2002-05-18  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* mime-play.el (mime-activate-mailcap-method): Don't use
	`binary-to-text-funcall'. (Thanks to TANAKA Shingo)

2003-12-14  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* mime-edit.el (mime-charset-type-list): Add entry for iso-8859-1[45].

2003-08-16  Daiki Ueno <ueno@unixuser.org>

	* Don't autoload S/MIME stuff.

	* pgg-def.el (pgg-overriding-user-id): New variable.
	* pgg.el (pgg-universal-user-id-argument): New command.
	* pgg-gpg.el (pgg-scheme-encrypt-region): Prefer
	pgg-overriding-user-id to pgg-gpg-user-id.
	(pgg-scheme-decrypt-region): Ditto.
	(pgg-scheme-sign-region): Ditto.
	(pgg-scheme-insert-key): Ditto.

2003-05-22  Daiki Ueno <ueno@unixuser.org>

	* mime-play.el (mime-activate-mailcap-method): Undo the last change.

2003-05-12  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-edit.el (turn-on-mime-edit): Protect 1st arg of `message'.
	* mime-view.el (mime-preview-follow-current-entity): Ditto.

2003-05-11  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-w3.el (mime-preview-text/html): Protect 1st arg of `message'.
	* mime-play.el (mime-mailcap-method-sentinel): Ditto.
	(mime-view-message/external-anon-ftp): Ditto.
	(mime-view-message/external-url): Ditto.

2003-05-02  Daiki Ueno  <ueno@unixuser.org>

	* mime-play.el (mime-activate-mailcap-method): Check the existance
	of the temporary file.
	[cf. <Wanderlust:11835>]
