@@ -189,15 +189,17 @@
 
 (defun mime-display-image (entity situation)
   (message "Decoding image...")
-  (let ((format (cdr (assq 'image-format situation)))
-	image)
-    (setq image (mime-image-create (mime-entity-content entity) format 'data))
-    (if (null image)
-	(message "Invalid glyph!")
-      (save-excursion
-	(mime-image-insert image)
-	(insert "\n")
-	(message "Decoding image...done")))))
+  (condition-case err
+      (let ((format (cdr (assq 'image-format situation)))
+	    image)
+	(setq image (mime-image-create (mime-entity-content entity) format 'data))
+	(if (null image)
+	    (message "Invalid glyph!")
+	  (save-excursion
+	    (mime-image-insert image)
+	    (insert "\n")
+	    (message "Decoding image...done"))))
+    (error nil err)))
 
 ;;; @ end
 ;;;
